@@ -1,6 +1,7 @@
 2007-10-16  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
 	* Fixed bug 4183: Incorrect display in htmlArea RTE of utf-8 labels for colors, classes and fonts defined in PageTSConfig
+	* Re-inserting accidently deleted comments in class.tx_rtehtmlarea_base.php.
 
 2007-10-15  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
